Initial Changes related to making plugin compatible with version 1.609 and above.